# human_gene_expression_database

./: METHODS.md  README.md  pyproject.toml  setup.py
ref/: ncbi_dataset.tsv
src/: Generic_Gene_Expression_App.R  scrape_ncbi_gene.py
src/preprocess_expression_atlas/: preprocess_EMTAB_2706.py
src/preprocess_fantom/: filterByCols.sh  getCols.sh  getSampleListCounts.sh  getSampleListTPM.sh  preprocess_fantom.sh  removeNA.sh
