[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human_gene_expression_resource"
version = "0.1"
authors = [
  { name="Mark Shulewitz", email="markshulewitz@gmail.com" },
]
description = "Generate human gene expression database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
	'bs4 ~= 0.0.1'
]

[tool.hatch.build.targets.wheel]
packages = ["sphinx-lint"]
exclude = ["READEME.md"]


